# huehoppy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  GITHUB_ACTIONS_SETUP.md  PLAN.md  README.md  REFACTOR_FILELIST.txt  TODO.md  pyproject.toml  requirements.txt
2llm/: 08task.txt  10orpg.txt  12task.txt  14orpg.txt  summary.md  task1.txt
github-workflows/: ci.yml  nightly.yml  release.yml
huehoppy/: __init__.py  cli.py
huehoppy/algorithms/: __init__.py  colortrans_lhm.py  colortrans_pccm.py  reinhard.py
huehoppy/algorithms/reinhard/: __init__.py  algorithm.py
huehoppy/core/: __init__.py  base.py  base_algorithm.py  manager.py  pipeline.py
huehoppy/tests/: __init__.py  test_mvp_functionality.py
huehoppy/utils/: __init__.py  image_io.py
scripts/: build-binaries.sh  build.sh  dev-setup.sh  release.sh  setup-github-actions.sh  test.sh
tests/: __init__.py  conftest.py  test_algorithms.py  test_cli.py  test_core.py  test_integration.py
work/: imagecolortransfer  imagecolortransfer_install  pylutek.py
